<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NIITFinalProject</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="catelogy_England">Bóng Đá Anh</string>
    <string name="catelogy_Y">Bóng Đá Ý </string>
    <string name="catelogy_VN">Bóng Đá Việt Nam</string>
    <string name="catelogy_EU">Bóng Đá Châu Âu</string>
    <string name="catelogy_Span">Bóng Đá Tây Ban Nha</string>
</resources>
